# global-market-news

./: .env  .env.example  .gitignore  AGENTS.md  PLANS.md  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
data/: news_mvp.db
scripts/: init_db.py  run_mktnews_live_bridge.py  run_pipeline.py  run_translation_backfill.py
src/news_mvp/: __init__.py  config.py  db.py  schema.py
src/news_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/news_mvp/collectors/: __init__.py  base.py  bls.py  federal_reserve.py  media_rss.py  mktnews.py  reuters.py  rss_multi.py
src/news_mvp/dashboard/: __init__.py  components.py  queries.py  styles.py  ui.py
src/news_mvp/pipeline/: __init__.py  cleaning.py  clustering.py  dedup.py  orchestrator.py  scoring.py  summarizer.py  tagging.py  translator.py
