[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-mvp"
version = "0.1.0"
description = "Financial intelligence aggregation dashboard MVP built with Python and Streamlit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "feedparser>=6.0.11",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "streamlit>=1.44.0",
  "websockets>=15.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
